<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/login_title"
                        android:textColor="#263D64"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <!-- Username -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/username"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_input"
                        android:fontFamily="@font/panaschill_font"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:paddingHorizontal="20dp" />

                    <!-- Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/password"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_input"
                        android:fontFamily="@font/panaschill_font"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingHorizontal="20dp" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="#263D64"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:textColor="#FEDDE9"
                        android:textSize="20sp"
                        app:cornerRadius="30dp" />

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/dont_have_account_register"
                        android:textSize="12sp"
                        android:textColor="#263D64" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
