<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/register_title"
                        android:textColor="#263D64"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <!-- Username -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/username"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/background_input"
                            android:fontFamily="@font/panaschill_font"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:inputType="textPersonName"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Email -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/email"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/background_input"
                            android:fontFamily="@font/panaschill_font"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:inputType="textEmailAddress"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/password"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/background_input"
                            android:fontFamily="@font/panaschill_font"
                            android:gravity="center_vertical"
                            android:inputType="textPassword"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            android:includeFontPadding="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Confirm Password -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/confirm_password"
                        android:textColor="#263D64"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/background_input"
                            android:fontFamily="@font/panaschill_font"
                            android:gravity="center_vertical"
                            android:inputType="textPassword"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            android:includeFontPadding="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnRegisterMember"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#263D64"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="#FEDDE9"
                        android:textSize="20sp"
                        app:cornerRadius="30dp" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/panaschill_font"
                        android:text="@string/already_a_member_sign_in"
                        android:textSize="12sp"
                        android:textColor="#263D64" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
